# RailsDates

./: .gitignore  MANIFEST  README.md  __init__.py  main.py  setup.cfg  setup.py
PyDate/: __init__.py  pydate_core.py
PyDate.egg-info/: PKG-INFO  SOURCES.txt
RailsDates/: __init__.py
src/kaylathomas_pd_test.egg-info/: PKG-INFO  SOURCES.txt
src/kt-pd-test/: __init__.py
src/kt-pd2-test/: main.py
src/kt_pd_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pd-test/: __init__.py
src/pd_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
