[metadata]
name = kt-pd-test
version = 0.0.2
author = KayLa Thomas
author_email = kaylathomas.dev@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaylathomas/pd-test
project_urls =
    Bug Tracker = https://github.com/kaylathomas/pd-test/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
