[metadata]
name = PyDate
version = 0.0.1
author = KayLa Thomas
author_email = kaylathomas.dev@gmail.com
description = This package is currently for internal testing use only.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kaylathomas/PyDate
project_urls =
    Bug Tracker = https://github.com/kaylathomas/PyDate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
